source/objects/Produto__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MERCEARIA</fullName>
                </value>
                <value>
                    <fullName>FRIOS E LATICÌNIOS</fullName>
                </value>
                <value>
                    <fullName>CONGELADOS</fullName>
                </value>
                <value>
                    <fullName>BEBIDAS</fullName>
                </value>
                <value>
                    <fullName>PADARIA</fullName>
                </value>
                <value>
                    <fullName>CARNES</fullName>
                </value>
                <value>
                    <fullName>UTILIDADES DOMÉSTICAS</fullName>
                </value>
                <value>
                    <fullName>LIMPEZA</fullName>
                </value>
                <value>
                    <fullName>HIGIÊNE</fullName>
                </value>
                <value>
                    <fullName>FRUTAS E LEGUMES</fullName>
                </value>
                <value>
                    <fullName>FÁRMACO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descricao__c</fullName>
        <description>Informação sobre à descrição do produto</description>
        <inlineHelpText>Informe dados sobre o produto.
Exemplo.: Qual o tipo dele. Arroz o que? Macassar, Preto ou Carioca.</inlineHelpText>
        <label>Descrição</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <description>Informação da marca do Produto</description>
        <inlineHelpText>Informe à marca do produto.: Exemplo.: Turquesa, Deline, Quero, Namorado...</inlineHelpText>
        <label>Marca</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacao__c</fullName>
        <inlineHelpText>Informe se houve um desconto no produto. 
Exemplo.: Na compra de quantos teve disconto?</inlineHelpText>
        <label>Observacao</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProdutoId__c</fullName>
        <displayFormat>PROD-{000}</displayFormat>
        <label>ID Produto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ValorMedio__c</fullName>
        <description>Valor Unitário do produto</description>
        <inlineHelpText>Informe o valor do produto</inlineHelpText>
        <label>Valor Médio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Produto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Marca__c</columns>
        <columns>Descricao__c</columns>
        <columns>Categoria__c</columns>
        <columns>ValorMedio__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nome do Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidacaoNomeProduto</fullName>
        <active>true</active>
        <description>Regra de validação responsável por validar se contém espaço.</description>
        <errorConditionFormula>CONTAINS(Name, &apos; &apos;)</errorConditionFormula>
        <errorMessage>Este campo é destinado para digitar apenas o nome do produto. Caso queira especificar mais detalhes sobre o produto, escreva no campo descrição.</errorMessage>
    </validationRules>
</CustomObject>